atualizacoes no projeto apos validacoes dos endpoints via collection